--- a/me.html
+++ b/me.html
@@ -51,7 +51,7 @@
     <div id="background">
         <div id="img"></div>
         <div id="button">
-            <a href="https://github.com/jhcorea9n9q/MyUI/blob/master/me2.html">클릭!</a>
+            <a href="https://jhcorea9n9q.github.io/MyUI/me2.html">클릭!</a>
         </div>
     </div>
 </body>
