--- a/me4.html
+++ b/me4.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <h2>사랑하는 할머니! 올해도 건강하시고. 행복하세요! 종화올림</h2>
+    <h2>사랑합니다! 올해도 건강하시고. 행복하세요! 종화가족 올림</h2>
      <div id="background">
         <div id="img"></div>
     </div>
